crates/biome_cli/tests/snapshots/main_commands_format/should_apply_different_formatting_with_cli.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome format --write --javascript-formatter-line-width=320 --javascript-formatter-indent-width=8 --json-formatter-line-width=20 --json-formatter-indent-width=2 --css-formatter-line-width=40 --css-formatter-indent-width=6 --css-formatter-enabled=true input.json input.js input.css
```

## `biome.json`

```json
{
  "formatter": {
    "indentStyle": "space"
  }
}
```

## `input.css`

```css
html {
}
```

## `input.js`

```js
const a = {
        array: ["lorem ipsum", "lorem ipsum", "lorem ipsum", "lorem ipsum", "lorem ipsum", "lorem ipsum", "lorem ipsum"],
};

```

## `input.json`

```json
{
  "array": [
    "lorem ipsum",
    "lorem ipsum",
    "lorem ipsum",
    "lorem ipsum",
    "lorem ipsum",
    "lorem ipsum",
    "lorem ipsum"
  ]
}

```

# Emitted Messages

```block
Formatted 3 files in <TIME>. Fixed 3 files.
```
