crates/biome_cli/tests/snapshots/main_commands_format/should_apply_different_indent_style.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome format --write input.json input.js
```

## `biome.json`

```json
{
  "formatter": {
    "indentStyle": "space"
  },
  "javascript": {
    "formatter": {
      "lineWidth": 320,
      "indentWidth": 8,
      "indentStyle": "tab"
    }
  },
  "json": {
    "formatter": {
      "lineWidth": 80,
      "indentWidth": 2,
      "indentStyle": "tab"
    }
  }
}
```

## `input.js`

```js
const a = {
	array: ["lorem ipsum", "lorem ipsum", "lorem ipsum", "lorem ipsum", "lorem ipsum", "lorem ipsum", "lorem ipsum"],
};

```

## `input.json`

```json
{
	"array": [
		"lorem ipsum",
		"lorem ipsum",
		"lorem ipsum",
		"lorem ipsum",
		"lorem ipsum",
		"lorem ipsum",
		"lorem ipsum"
	]
}

```

# Emitted Messages

```block
Formatted 2 files in <TIME>. Fixed 2 files.
```
