crates/biome_cli/tests/snapshots/main_commands_format/should_error_if_unchanged_files_only_with_changed_flag.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome format --changed --since=main
```

## `file1.js`

```js
console.log('file1');
```

# Termination Message

```block
format ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × No files were processed in the specified paths.
  
  i Check your biome.json or biome.jsonc to ensure the paths are not ignored by the configuration.
  
  i These paths were provided but ignored:
  
  ! The list is empty.
  


```

# Emitted Messages

```block
Checked 0 files in <TIME>. No fixes applied.
```
