crates/biome_cli/tests/snapshots/main_commands_format/should_format_file_with_syntax_errors_when_flag_enabled.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome format --format-with-errors=true --write invalid.js
```

## `invalid.js`

```js
while ) {}

```

# Termination Message

```block
format ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Some errors were emitted while running checks.
  


```

# Emitted Messages

```block
invalid.js:1:7 parse ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × expected `(` but instead found `)`
  
  > 1 │ while ) {}
      │       ^
  
  i Remove )
  

```

```block
Formatted 1 file in <TIME>. Fixed 1 file.
Found 1 error.
```
