crates/biome_cli/tests/snapshots/main_commands_format/should_format_files_in_folders_ignored_by_linter.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome format --write build/file.js
```

## `biome.json`

```json
{
  "$schema": "https://biomejs.dev/schemas/1.6.1/schema.json",
  "assist": {
    "enabled": true
  },
  "linter": {
    "includes": ["**", "!**/build"],
    "enabled": true,
    "rules": {
      "preset": "recommended"
    }
  }
}
```

## `build/file.js`

```js
value["optimizelyService"] = optimizelyService;

```

# Emitted Messages

```block
biome.json:2:24 deserialize ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  i The configuration schema version does not match the CLI version 0.0.0
  
    1 │ {
  > 2 │             "$schema": "https://biomejs.dev/schemas/1.6.1/schema.json",
      │                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    3 │             "assist": {
    4 │                 "enabled": true
  
  i   Expected:                     0.0.0
      Found:                        1.6.1
  
  
  i Run the command biome migrate to migrate the configuration file.
  

```

```block
Formatted 1 file in <TIME>. Fixed 1 file.
```
