crates/biome_cli/tests/snapshots/main_commands_format/trailing_comma_parse_errors.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: content
---
# Termination Message

```block
flags/invalid ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Failed to parse CLI arguments.
    
    Caused by:
      couldn't parse `NONE`: Value not supported for TrailingComma
  


```


