crates/biome_cli/tests/snapshots/main_commands_format/trailing_commas_parse_errors.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome format --trailing-commas NONE file.js
```

# Termination Message

```block
flags/invalid ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Failed to parse CLI arguments.
    
    Caused by:
      couldn't parse `NONE`: Value not supported for TrailingCommas
  


```
